@@ -1,3 +1,7 @@
+2014-11-25  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
+
+	* Fixed bug #62145: RealURL Backend module does not work well with SSL
+
 2014-11-04  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Fixed bug #62442: Wrong cropping of multibyte URLs
